# API-COMEDOR-IOT

./: Pipfile  README.md  main.py  models.py  package-lock.json  package.json  pyproject.toml  requirements.txt
app/: globals.css  layout.tsx  page.tsx
app/api/get-dht/: route.ts
app/api/get-dht-history/: route.ts
app/api/get-infrared/: route.ts
app/api/get-servo-log/: route.ts
app/api/send-dht/: route.ts
app/api/send-infrared/: route.ts
app/api/send-servo/: route.ts
app/api/servo/: route.ts
app/api/servo-executed/: route.ts
app/api/servo-status/: route.ts
app/api/trigger-servo/: route.ts
components/: EnvironmentStatus.tsx  FoodStatus.tsx  HistoryChart.tsx  LogTable.tsx  SensorCard.tsx  ServoControl.tsx
lib/: firebase.ts
